# garment-productivity-prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  Garment_Productivity_Analysis.ipynb  Makefile  README.md  app.py  main.py  model_pipeline.py  pyproject.toml  pytest.ini  requirements.txt  requirements_deploy.txt  setup.py  test_payload.json
artifacts/models/: model.pkl  model_metadata.pkl
artifacts/results/: feature_importance.csv  model_comparison.csv  tuning_results.csv
artifacts/scalers/: scaler.pkl  standard_scaler.pkl
config/: config.yaml
data/raw/: data.txt
docker/: Dockerfile  docker-compose.yml
mlartifacts/1/models/m-1c46582e1f8e47a9ba64b73b967657f9/artifacts/: MLmodel  input_example.json  model.pkl
mlartifacts/1/models/m-c3d35366ac4d4ecc89aca52f07cad66f/artifacts/: MLmodel  serving_input_example.json
notebooks/: Garment_Productivity_Analysis.ipynb
notebooks/artifacts/models/: Linear_Regression_final.pkl
notebooks/artifacts/results/: model_comparison.csv  tuning_results.csv
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
scripts/: test_monitoring.py  train.py  train_monitored.py  verify_structure.py
src/: __init__.py  monitoring.py
src/api/: __init__.py  app.py
tests/: __init__.py  test_api.py  test_pipeline.py  test_retrain.py
