[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garment-productivity-prediction"
version = "1.0.0"
description = "ML Pipeline for Garment Productivity Prediction with MLOps"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Fares", email = "fares@example.com" }
]
requires-python = ">=3.9"
keywords = [
    "machine-learning",
    "mlops",
    "prediction",
    "fastapi",
    "monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "mlflow>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
monitoring = [
    "elasticsearch==8.11.0",
    "psutil>=5.9.0",
]
all = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "wandb>=0.15.0",
    "dvc>=3.0.0",
    "great-expectations>=0.17.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/fares279/garment-productivity-prediction"
Repository = "https://github.com/fares279/garment-productivity-prediction"
Documentation = "https://github.com/fares279/garment-productivity-prediction"
Issues = "https://github.com/fares279/garment-productivity-prediction/issues"

[tool.setuptools]
packages = ["src", "config"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
